# backend/src/routes/service-order-composer.routes.ts
@@ -1,0 +1,9 @@
+import express, { Router } from 'express';
+import ServiceOrderComposerController from '../controllers/service-order-composer.controller';
+
+const router: Router = express.Router();
+
+router.get('/search', ServiceOrderComposerController.getSearchResults);
+router.post('/submit', ServiceOrderComposerController.composeServiceOrder);
+
+export default router;
